[package]
name = "claudesu"
version = "0.1.1"
edition = "2021"
description = "Switch between multiple Claude Code accounts"
license = "MIT"

[[bin]]
name = "csu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
directories = "5"
fs2 = "0.4"
comfy-table = "7"
dialoguer = { version = "0.11", default-features = false }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
security-framework-sys = "2"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native-async-persistent", "crypto-rust", "async-io"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
